--- a/TransSession.Tests/TransSession.Tests.csproj
+++ b/TransSession.Tests/TransSession.Tests.csproj
@@ -16,6 +16,9 @@
         </PackageReference>
         <PackageReference Include="MartinCostello.Logging.XUnit.v3" />
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Testcontainers.MsSql" />
+        <PackageReference Include="Testcontainers.RabbitMq" />
+        <PackageReference Include="Testcontainers.Toxiproxy" />
         <PackageReference Include="xunit.v3"/>
         <PackageReference Include="xunit.runner.visualstudio"/>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing">
