--- a/First.Api/appsettings.json
+++ b/First.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NServiceBus":
+  {
+    "EndPointName":"FirstApi",
+    "RabbitConnectionString":"host=localhost;username=guest;password=guest",
+    "PersistenceConnectionString":"Server=localhost;Database=Nsb;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+  }
+
 }
