--- a/First.Api/appsettings.json
+++ b/First.Api/appsettings.json
@@ -9,8 +9,12 @@
   "NServiceBus":
   {
     "EndPointName":"FirstApi",
-    "RabbitConnectionString":"host=localhost;username=guest;password=guest",
-    "PersistenceConnectionString":"Server=localhost;Database=Nsb;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+    "RabbitMqConnectionString":"AAAAPPP***host=localhost;username=guest;password=guest",
+    "PersistenceConnectionString":"AAAAPPP***Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+  },
+  "SqlServer":
+  {
+    "ConnectionString": "Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
   }
 
 }
