--- a/Second.Api/appsettings.json
+++ b/Second.Api/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "NServiceBus":
+  {
+    "EndPointName":"SecondApi",
+    "RabbitMqConnectionString":"AAAAPPP***host=localhost;username=guest;password=guest",
+    "PersistenceConnectionString":"AAAAPPP***Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+  },
+  "SqlServer":
+  {
+    "ConnectionString": "Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+  }
+
 }
