migrated some config logic into Shared Project

--- a/First.Api/appsettings.json
+++ b/First.Api/appsettings.json
@@ -9,8 +9,8 @@
   "NServiceBus":
   {
     "EndPointName":"FirstApi",
-    "RabbitMqConnectionString":"AAAAPPP***host=localhost;username=guest;password=guest",
-    "PersistenceConnectionString":"AAAAPPP***Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+    "RabbitMqConnectionString":"AppSettingsPlaceHolder;host=localhost;username=guest;password=guest",
+    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
   },
   "SqlServer":
   {
