--- a/First.Api/First.Api.csproj
+++ b/First.Api/First.Api.csproj
@@ -18,6 +18,7 @@
     <ItemGroup>
       <ProjectReference Include="..\First.Contracts\First.Contracts.csproj" />
       <ProjectReference Include="..\Second.Contracts\Second.Contracts.csproj" />
+      <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
     </ItemGroup>
 
     
