--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageVersion Include="MartinCostello.Logging.XUnit.v3" Version="0.7.0" />
     <PackageVersion Include="Microsoft.Data.SqlClient" Version="6.1.3" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
     <PackageVersion Include="NServiceBus.Persistence.Sql.TransactionalSession" Version="8.3.0" />
     <PackageVersion Include="NServiceBus.RabbitMQ" Version="10.1.6" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
