--- a/Shared.Infrastructure/Shared.Infrastructure.csproj
+++ b/Shared.Infrastructure/Shared.Infrastructure.csproj
@@ -12,6 +12,7 @@
     
     <ItemGroup>
         <PackageReference Include="Microsoft.Data.SqlClient" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
         <PackageReference Include="NServiceBus.Extensions.Hosting"/>
         <PackageReference Include="NServiceBus.Persistence.Sql.TransactionalSession"/>
         <PackageReference Include="NServiceBus.RabbitMQ"/>
