--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,6 +13,7 @@
     <PackageVersion Include="Testcontainers.MsSql" Version="4.9.0" />
     <PackageVersion Include="Testcontainers.RabbitMq" Version="4.9.0" />
     <PackageVersion Include="Testcontainers.Toxiproxy" Version="4.9.0" />
+    <PackageVersion Include="ToxiproxyNetCore" Version="1.0.50" />
     <PackageVersion Include="xunit.v3" Version="3.2.1" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.1.5" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.22" />
