Transactional test passing

--- a/Second.Api/appsettings.json
+++ b/Second.Api/appsettings.json
@@ -15,6 +15,9 @@
   "SqlServer":
   {
     "ConnectionString": "Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+  },
+  "Nginx":
+  {
+    "BaseAddress": "http://localhost:80"
   }
-
 }
