fixed mapped ports isolating fixture from wafs

--- a/First.Api/appsettings.json
+++ b/First.Api/appsettings.json
@@ -9,8 +9,11 @@
   "NServiceBus":
   {
     "EndPointName":"FirstApi",
-    "RabbitMqConnectionString":"AppSettingsPlaceHolder;host=localhost;username=guest;password=guest",
-    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+    "RabbitMqConnectionString":"host=localhost;username=guest;password=guest",
+    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True",
+    "RabbitMqManagementApiUrl":"http://localhost:15672",
+    "RabbitMqManagementApiUser": "guest",
+    "RabbitMqManagementApiPassword": "guest"
   },
   "SqlServer":
   {
