--- a/Second.Api/appsettings.json
+++ b/Second.Api/appsettings.json
@@ -9,8 +9,9 @@
   "NServiceBus":
   {
     "EndPointName":"SecondApi",
-    "RabbitMqConnectionString":"AAAAPPP***host=localhost;username=guest;password=guest",
-    "PersistenceConnectionString":"AAAAPPP***Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+    "RabbitMqConnectionString":"host=localhost;username=guest;password=guest",
+    "RabbitMqManagementUrl":"http://localhost:15672",
+    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
   },
   "SqlServer":
   {
