Manually confirmed that transactional session works inside event handler in second api

--- a/First.Api/appsettings.json
+++ b/First.Api/appsettings.json
@@ -10,7 +10,7 @@
   {
     "EndPointName":"FirstApi",
     "RabbitMqConnectionString":"host=localhost;username=guest;password=guest",
-    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True",
+    "PersistenceConnectionString":"Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True",
     "RabbitMqManagementApiUrl":"http://localhost:15672",
     "RabbitMqManagementApiUser": "guest",
     "RabbitMqManagementApiPassword": "guest"
