--- a/Second.Api/appsettings.json
+++ b/Second.Api/appsettings.json
@@ -10,8 +10,10 @@
   {
     "EndPointName":"SecondApi",
     "RabbitMqConnectionString":"host=localhost;username=guest;password=guest",
-    "RabbitMqManagementUrl":"http://localhost:15672",
-    "PersistenceConnectionString":"AppSettingsPlaceHolder;Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True"
+    "PersistenceConnectionString":"Server=localhost;Database=Poc;User Id=sa;Password=SaPassword123;TrustServerCertificate=True",
+    "RabbitMqManagementApiUrl":"http://localhost:15672",
+    "RabbitMqManagementApiUser": "guest",
+    "RabbitMqManagementApiPassword": "guest"
   },
   "SqlServer":
   {
